config trang landing page
